// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar renders the UI snapshot correctly 1`] = `
<div
  className="css-awgckc"
  data-testid="ds-searchBar"
  id="basic-componentWrapper"
>
  <form
    aria-label="SearchBar label - Search for items in Animal Crossing New Horizons"
    className="css-0"
    id="basic-form"
    onSubmit={[MockFunction]}
  >
    <div
      className="css-1ik4laa"
    >
      <div
        className="ds-searchBar-textInput css-1u8qly9"
        data-testid="ds-textInput"
        id="basic-textInput-componentWrapper"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-describedby="basic-helperErrorText"
            aria-label="Item Search"
            autoComplete={null}
            className="chakra-input css-0"
            disabled={false}
            id="basic-textInput"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search "
            required={false}
            step={null}
            type="text"
          />
        </div>
      </div>
      <button
        className="chakra-button ds-searchBar-button css-1xdhyk6"
        data-button={true}
        data-testid="ds-button"
        id="basic-submit-button"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="basic-submit-icon"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="basic-helperErrorText"
  >
    <div
      className="css-0"
      dangerouslySetInnerHTML={
        {
          "__html": "Search for items in Animal Crossing New Horizons",
        }
      }
    />
  </div>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 2`] = `
<div
  className="css-awgckc"
  data-testid="ds-searchBar"
  id="withSelect-componentWrapper"
>
  <form
    aria-label="SearchBar label - Search for items in Animal Crossing New Horizons"
    className="css-0"
    id="withSelect-form"
    onSubmit={[MockFunction]}
  >
    <div
      className="css-1u8qly9"
      data-select={true}
      data-testid="ds-select"
      id="withSelect-select-componentWrapper"
    >
      <div
        className="css-0"
      >
        <div
          className="chakra-select__wrapper css-42b2qy"
        >
          <select
            aria-label="Select a category"
            className="chakra-select css-1ik61og"
            disabled={false}
            id="withSelect-select"
            name="selectName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            value="Songs"
          >
            <option
              value="art"
            >
              Art
            </option>
            <option
              value="bushes"
            >
              Bushes
            </option>
            <option
              value="clothing"
            >
              Clothing
            </option>
            <option
              value="flowers"
            >
              Flowers
            </option>
            <option
              value="fossils"
            >
              Fossils
            </option>
            <option
              value="fruits"
            >
              Fruits
            </option>
            <option
              value="furniture"
            >
              Furniture
            </option>
            <option
              value="songs"
            >
              Songs
            </option>
            <option
              value="tools"
            >
              Tools
            </option>
            <option
              value="villagers"
            >
              Villagers
            </option>
          </select>
          <div
            className="chakra-select__icon-wrapper css-162mkon"
          >
            <svg
              aria-hidden={true}
              className="chakra-icon chakra-select__icon css-1nreziu"
              data-file-name="SvgArrow"
              focusable={false}
              id="withSelect-select-select-icon"
              role="presentation"
              style={
                {
                  "color": "currentColor",
                  "height": "1em",
                  "width": "1em",
                }
              }
              title="arrow icon"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-1ik4laa"
    >
      <div
        className="ds-searchBar-textInput css-1u8qly9"
        data-testid="ds-textInput"
        id="withSelect-textInput-componentWrapper"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-describedby="withSelect-helperErrorText"
            aria-label="Item Search"
            autoComplete={null}
            className="chakra-input css-0"
            disabled={false}
            id="withSelect-textInput"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search "
            required={false}
            step={null}
            type="text"
          />
        </div>
      </div>
      <button
        className="chakra-button ds-searchBar-button css-1xdhyk6"
        data-button={true}
        data-testid="ds-button"
        id="withSelect-submit-button"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="withSelect-submit-icon"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="withSelect-helperErrorText"
  >
    <div
      className="css-0"
      dangerouslySetInnerHTML={
        {
          "__html": "Search for items in Animal Crossing New Horizons",
        }
      }
    />
  </div>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 3`] = `
<div
  className="css-awgckc"
  data-testid="ds-searchBar"
  id="withoutHelperText-componentWrapper"
>
  <form
    aria-label="SearchBar label"
    className="css-0"
    id="withoutHelperText-form"
    onSubmit={[MockFunction]}
  >
    <div
      className="css-1ik4laa"
    >
      <div
        className="ds-searchBar-textInput css-1u8qly9"
        data-testid="ds-textInput"
        id="withoutHelperText-textInput-componentWrapper"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-label="Item Search"
            autoComplete={null}
            className="chakra-input css-0"
            disabled={false}
            id="withoutHelperText-textInput"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search "
            required={false}
            step={null}
            type="text"
          />
        </div>
      </div>
      <button
        className="chakra-button ds-searchBar-button css-1xdhyk6"
        data-button={true}
        data-testid="ds-button"
        id="withoutHelperText-submit-button"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="withoutHelperText-submit-icon"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 4`] = `
<div
  className="css-awgckc"
  data-testid="ds-searchBar"
  id="withClearButton-componentWrapper"
>
  <form
    aria-label="SearchBar label - Search for items in Animal Crossing New Horizons"
    className="css-0"
    id="withClearButton-form"
    onSubmit={[MockFunction]}
  >
    <div
      className="css-1ik4laa"
    >
      <div
        className="ds-searchBar-textInput css-1u8qly9"
        data-testid="ds-textInput"
        id="withClearButton-textInput-componentWrapper"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-describedby="withClearButton-helperErrorText"
            aria-label="Item Search"
            autoComplete={null}
            className="chakra-input css-0"
            disabled={false}
            id="withClearButton-textInput"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search "
            required={false}
            step={null}
            type="text"
          />
        </div>
      </div>
      <button
        className="chakra-button ds-searchBar-button css-1xdhyk6"
        data-button={true}
        data-testid="ds-button"
        id="withClearButton-submit-button"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="withClearButton-submit-icon"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="withClearButton-helperErrorText"
  >
    <div
      className="css-0"
      dangerouslySetInnerHTML={
        {
          "__html": "Search for items in Animal Crossing New Horizons",
        }
      }
    />
  </div>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 5`] = `
<div
  className="css-awgckc"
  data-testid="ds-searchBar"
  id="invalidState-componentWrapper"
>
  <form
    aria-label="SearchBar label"
    className="css-0"
    id="invalidState-form"
    onSubmit={[MockFunction]}
  >
    <div
      className="css-1ik4laa"
    >
      <div
        className="ds-searchBar-textInput css-1u8qly9"
        data-testid="ds-textInput"
        id="invalidState-textInput-componentWrapper"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-describedby="invalidState-textInput-helperErrorText"
            aria-invalid={true}
            aria-label="Item Search"
            autoComplete={null}
            className="chakra-input css-0"
            disabled={false}
            id="invalidState-textInput"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search "
            required={false}
            step={null}
            type="text"
          />
        </div>
        <div
          aria-atomic={true}
          aria-live="polite"
          className="css-1xdhyk6"
          data-isinvalid={true}
          data-testid="ds-helperErrorText"
          id="invalidState-textInput-helperErrorText"
        />
      </div>
      <button
        className="chakra-button ds-searchBar-button css-1xdhyk6"
        data-button={true}
        data-testid="ds-button"
        id="invalidState-submit-button"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="invalidState-submit-icon"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 6`] = `
<div
  className="css-awgckc"
  data-testid="ds-searchBar"
  id="disabledState-componentWrapper"
>
  <form
    aria-label="SearchBar label"
    className="css-0"
    id="disabledState-form"
    onSubmit={[MockFunction]}
  >
    <div
      className="css-1ik4laa"
    >
      <div
        className="ds-searchBar-textInput css-1u8qly9"
        data-testid="ds-textInput"
        id="disabledState-textInput-componentWrapper"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-label="Item Search"
            autoComplete={null}
            className="chakra-input css-0"
            disabled={true}
            id="disabledState-textInput"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search "
            required={false}
            step={null}
            type="text"
          />
        </div>
      </div>
      <button
        className="chakra-button ds-searchBar-button css-1xdhyk6"
        data-button={true}
        data-testid="ds-button"
        disabled={true}
        id="disabledState-submit-button"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="disabledState-submit-icon"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 7`] = `
<div
  className="css-awgckc"
  data-testid="ds-searchBar"
  id="requiredState-componentWrapper"
>
  <form
    aria-label="SearchBar label"
    className="css-0"
    id="requiredState-form"
    onSubmit={[MockFunction]}
  >
    <div
      className="css-1ik4laa"
    >
      <div
        className="ds-searchBar-textInput css-1u8qly9"
        data-testid="ds-textInput"
        id="requiredState-textInput-componentWrapper"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-label="Item Search"
            aria-required={true}
            autoComplete={null}
            className="chakra-input css-0"
            disabled={true}
            id="requiredState-textInput"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search (required)"
            required={true}
            step={null}
            type="text"
          />
        </div>
      </div>
      <button
        className="chakra-button ds-searchBar-button css-1xdhyk6"
        data-button={true}
        data-testid="ds-button"
        disabled={true}
        id="requiredState-submit-button"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="requiredState-submit-icon"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 8`] = `
<div
  className="css-awgckc"
  data-testid="ds-searchBar"
  id="noBrandButtonType-componentWrapper"
>
  <form
    aria-label="SearchBar label"
    className="css-0"
    id="noBrandButtonType-form"
    onSubmit={[MockFunction]}
  >
    <div
      className="css-1ik4laa"
    >
      <div
        className="ds-searchBar-textInput css-1u8qly9"
        data-testid="ds-textInput"
        id="noBrandButtonType-textInput-componentWrapper"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-label="Item Search"
            aria-required={true}
            autoComplete={null}
            className="chakra-input css-0"
            disabled={true}
            id="noBrandButtonType-textInput"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search (required)"
            required={true}
            step={null}
            type="text"
          />
        </div>
      </div>
      <button
        className="chakra-button ds-searchBar-button css-1xdhyk6"
        data-button={true}
        data-testid="ds-button"
        disabled={true}
        id="noBrandButtonType-submit-button"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="noBrandButtonType-submit-icon"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 9`] = `
<div
  className="css-awgckc"
  data-testid="ds-searchBar"
  id="withHeading-componentWrapper"
>
  <h2
    className="chakra-heading css-1uhtpq1"
    data-testid="ds-heading"
    id="withHeading-heading"
  >
    A Heading
  </h2>
  <form
    aria-label="SearchBar label"
    className="css-0"
    id="withHeading-form"
    onSubmit={[MockFunction]}
  >
    <div
      className="css-1ik4laa"
    >
      <button
        className="chakra-button ds-searchBar-button css-1xdhyk6"
        data-button={true}
        data-testid="ds-button"
        id="withHeading-submit-button"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="withHeading-submit-icon"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 10`] = `
<div
  className="css-awgckc"
  data-testid="ds-searchBar"
  id="withDescription-componentWrapper"
>
  <p
    className="chakra-text css-ap6r8h"
    data-testid="ds-text"
  >
    A description
  </p>
  <form
    aria-label="SearchBar label"
    className="css-0"
    id="withDescription-form"
    onSubmit={[MockFunction]}
  >
    <div
      className="css-1ik4laa"
    >
      <button
        className="chakra-button ds-searchBar-button css-1xdhyk6"
        data-button={true}
        data-testid="ds-button"
        id="withDescription-submit-button"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="withDescription-submit-icon"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 11`] = `
<div
  className="css-awgckc"
  data-testid="ds-searchBar"
  id="withHeadingAndDescription-componentWrapper"
>
  <h2
    className="chakra-heading css-1uhtpq1"
    data-testid="ds-heading"
    id="withHeadingAndDescription-heading"
  >
    A Heading
  </h2>
  <p
    className="chakra-text css-ap6r8h"
    data-testid="ds-text"
  >
    A description
  </p>
  <form
    aria-label="SearchBar label"
    className="css-0"
    id="withHeadingAndDescription-form"
    onSubmit={[MockFunction]}
  >
    <div
      className="css-1ik4laa"
    >
      <button
        className="chakra-button ds-searchBar-button css-1xdhyk6"
        data-button={true}
        data-testid="ds-button"
        id="withHeadingAndDescription-submit-button"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="withHeadingAndDescription-submit-icon"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 12`] = `
<div
  className="css-z7xmmg"
  data-testid="ds-searchBar"
  id="chakra-componentWrapper"
>
  <form
    aria-label="SearchBar label - Search for items in Animal Crossing New Horizons"
    className="css-0"
    id="chakra-form"
    onSubmit={[MockFunction]}
  >
    <div
      className="css-1ik4laa"
    >
      <div
        className="ds-searchBar-textInput css-1u8qly9"
        data-testid="ds-textInput"
        id="chakra-textInput-componentWrapper"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-describedby="chakra-helperErrorText"
            aria-label="Item Search"
            autoComplete={null}
            className="chakra-input css-0"
            disabled={false}
            id="chakra-textInput"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search "
            required={false}
            step={null}
            type="text"
          />
        </div>
      </div>
      <button
        className="chakra-button ds-searchBar-button css-1xdhyk6"
        data-button={true}
        data-testid="ds-button"
        id="chakra-submit-button"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="chakra-submit-icon"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="chakra-helperErrorText"
  >
    <div
      className="css-0"
      dangerouslySetInnerHTML={
        {
          "__html": "Search for items in Animal Crossing New Horizons",
        }
      }
    />
  </div>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 13`] = `
<div
  className="css-awgckc"
  data-testid="props"
  id="props-componentWrapper"
>
  <form
    aria-label="SearchBar label - Search for items in Animal Crossing New Horizons"
    className="css-0"
    id="props-form"
    onSubmit={[MockFunction]}
  >
    <div
      className="css-1ik4laa"
    >
      <div
        className="ds-searchBar-textInput css-1u8qly9"
        data-testid="ds-textInput"
        id="props-textInput-componentWrapper"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-describedby="props-helperErrorText"
            aria-label="Item Search"
            autoComplete={null}
            className="chakra-input css-0"
            disabled={false}
            id="props-textInput"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search "
            required={false}
            step={null}
            type="text"
          />
        </div>
      </div>
      <button
        className="chakra-button ds-searchBar-button css-1xdhyk6"
        data-button={true}
        data-testid="ds-button"
        id="props-submit-button"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="props-submit-icon"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="props-helperErrorText"
  >
    <div
      className="css-0"
      dangerouslySetInnerHTML={
        {
          "__html": "Search for items in Animal Crossing New Horizons",
        }
      }
    />
  </div>
</div>
`;
